  miniapps/parelag directory for more details.

- Fixed several MinGW build issues on Windows.

- Remove the 'u' flag in the ar command, to update all files in the archive,
  avoiding file name collisions from different subdirectories.

- Added initial TMOP-based capabilities for surface fitting and tangential
  relaxation in the mesh-optimizer and pmesh-optimizer miniapps.


Version 4.3, released on July 29, 2021
======================================

Discretization improvements
---------------------------
- Variable order spaces, p- and hp-refinement. This is the initial (serial)
  support for variable-order FiniteElementCollection and FiniteElementSpace.
  The new method FiniteElementSpace::SetElementOrder can be called to set an
  arbitrary order for each mesh element. The conforming interpolation matrix
  will now automatically constrain p- and hp- interfaces, enabling general
  hp-refinement in both 2D and 3D, on uniform or mixed NC meshes. Support for
  parallel variable-order spaces will follow shortly.

- Extended the support for field transfer between high-order and low-order
  refined finite element spaces to include: dual fields and H1 fields (both
  primary and dual). These are illustrated in the lor-transfer miniapp.

- Improved libCEED integration, including support for VectorCoefficient,
  ConvectionIntegrator, and VectorConvectionNLFIntegrator with libCEED backends.

- Extending support for L2 basis functions using MapTypes VALUE and INTEGRAL in
  linear interpolators and GridFunction "GetValue" methods.

- Changed the interface for the error estimator and implemented the Kelly error
  indicator for scalar-valued problems, supported in serial and parallel builds.

- Added support for the "BR2" discontinuous Galerkin discretization for
  diffusion via DGDiffusionBR2Integrator (see Example 14/14p).

- Added convective and skew-symmetric integrators for the nonlinear term in the
  Navier-Stokes equations.
